# boxclaw

./: .gitignore  README.md  pyproject.toml  setup.py
boxclaw/: __init__.py  cli.py  decorators.py  fallback.py  instrumentation.py  middlewares.py  sandbox.py
boxclaw/bindings/: __init__.py  langchain.py  openai.py
boxclaw/hardened/: __init__.py  sandbox.py  seccomp_generator.py
