[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boxclaw"
version = "0.1.3"
authors = [
  { name="Certior Team" },
]
description = "execution-environment boundary for LLMs operating inside agent frameworks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyJWT>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/certior/boxclaw"
"Repository" = "https://github.com/certior/boxclaw"
"Bug Tracker" = "https://github.com/certior/boxclaw/issues"

[project.scripts]
certior = "boxclaw.cli:main"
